# a2a_multi_agents

./: .gitignore  README.md
elliot_langgraph_agent/: pyproject.toml
elliot_langgraph_agent/app/: __main__.py  agent.py  agent_executor.py
emma_adk_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
host_adk_agent/: pyproject.toml
host_adk_agent/host/: agent.py
mike_crewai_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
