[project]
name = "mike-scheduling-agent"
version = "0.1.0"
description = "Mike's scheduling agent for the A2A project."
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.5",
    "crewai[google-genai,tools]>=0.126.0",
    "pydantic",
    "python-dotenv",
    "uvicorn",
    "google-generativeai",
] 
